@@ -6,7 +6,6 @@ $action='student_view.php';
 
 include('scripts/sub_action.php');
 
-$todate=date('Y-m-d');
 
 if($sub=='Submit'){
 	$Targets=(array)fetchTargets($sid);
@@ -15,17 +14,19 @@ if($sub=='Submit'){
 			$cattype=$Target['Category']['value_db'];
 			$inname='detail'.$index;
 			$inval=clean_text($_POST[$inname]);
-			trigger_error($cattype.' '.$inname.' '.$inval,E_USER_WARNING);
+			$indate=$_POST['entrydate'.$index];
+			trigger_error($indate,E_USER_WARNING);
+			if($indate=='0000-00-00' or $indate==''){$entrydate=date('Y-m-d');}
+			else{$entrydate=$indate;}
 
-			if($Target['Detail']['value']!=$inval){
+			if(clean_text($Target['Detail']['value'])!=$inval){
 				$noteid=$Target['id_db'];
 				if($noteid==''){
-					mysql_query("INSERT INTO background
-						(student_id,detail,type,entrydate) 
-						VALUES ('$sid','$inval','$cattype','$todate');");
+					mysql_query("INSERT INTO background (student_id,detail,type,entrydate) 
+									VALUES ('$sid','$inval','$cattype','$entrydate');");
 					}
 				else{
-					mysql_query("UPDATE background SET detail='$inval', entrydate='$todate'
+					mysql_query("UPDATE background SET detail='$inval', entrydate='$entrydate'
 									WHERE id='$noteid';");
 					}
 				}
