@@ -3,6 +3,7 @@ Version ClaSS-1.0.32 release (2012/09/26)
 
 Two new fields added to info for Cadidate Number and UCI.
 
+Exposed the date entry date fields for Targets.
 
 
 Version ClaSS-1.0.31 release (2012/09/23)
